--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "rm -rf dist && webpack --mode production",
     "dev": "webpack serve",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "lint": "npx eslint ."
   },
   "repository": {
     "type": "git",
